--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jest-watch-typeahead": "^0.2.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "loadsh": "^0.0.4",
     "mime": "^2.4.2",
     "mini-css-extract-plugin": "0.5.0",
     "mobx": "^5.9.4",
