--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-react-app": "^7.0.2",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "clipboard": "^2.0.4",
     "css-loader": "1.0.0",
     "customize-cra": "^0.2.12",
     "dotenv": "6.0.0",
